# kubernetes-chatgpt-bot

./: .gitignore  README.md  pyproject.toml
chatgpt_robusta_actions/: amazon_bedrock.py  chat_gpt.py  chat_gpt_original.py  exceptions.py  opsGenieAlerting.py
